--- a/app/taskPage.module.css
+++ b/app/taskPage.module.css
@@ -23,7 +23,8 @@
   margin-bottom: 1rem;
 }
 
-.input {
+.input,
+.textarea {
   width: 100%;
   padding: 1rem;
   font-size: 1.2rem;
@@ -33,9 +34,12 @@
   background-color: #fce4ec;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   outline: none;
+  resize: none;
+  box-sizing: border-box; 
 }
 
-.input:focus {
+.input:focus,
+.textarea:focus {
   border: 2px solid #ff4f81;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 0 0 3px #ff4f81;
 }
@@ -73,4 +77,3 @@
 .taskListItem p {
   font-size: 1rem;
 }
-
