adjustments to rewrite, added api route /api/todos GET all todos

--- a/app/databasetest/ToDoList.module.css
+++ b/app/databasetest/ToDoList.module.css
@@ -6,3 +6,13 @@
   /* remove the default ul padding left */
   padding-left: 0;
 }
+
+.loading {
+  text-align: center;
+  color: greenyellow;
+}
+
+.error {
+  text-align: center;
+  color: red;
+}
